--- a/views/date.erb
+++ b/views/date.erb
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Today</h1>
-        <p> This page is a homage to today. </p>
+        <p> The date is <%=Date.today.strftime("%A, %B %d, %Y")%> </p>
     </body>
 </html>
